Fix navbar icon spacing and styled index items on album index

--- a/frontend/src/components/stylesheets/navbar/navbar.scss
+++ b/frontend/src/components/stylesheets/navbar/navbar.scss
@@ -64,7 +64,7 @@ input:focus {
   // padding: 0px 10px 0px 10px;
   border-bottom: 3px solid transparent;
   .fas {
-    margin-right: 5px;
+    margin-right: 10px;
   }
 }
 
@@ -96,7 +96,7 @@ input:focus {
   // padding: 0px 10px 0px 10px;
   border-bottom: 3px solid transparent;
   .fas{
-    margin-right: 5px;
+    margin-right: 10px;
   }
 }
 
@@ -129,7 +129,7 @@ input:focus {
   // padding: 0px 10px 0px 10px;
   border-bottom: 3px solid transparent;
   .fas {
-    margin-right: 5px;
+    margin-right: 10px;
   }
 }
 
